Switch to 16.ea.24-open